components/mgmt/sgrules_gitlab_gitlab_amz2.tf
resource "aws_security_group_rule" "gitlab-amzn2_egress_jenkins_elb_80" {
  description              = "Allow TCP/80 to Jenkins"
  type                     = "egress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  security_group_id        = module.gitlab-amzn2.gitlab_sg_id
  source_security_group_id = module.jenkins.elb_sg_id
}

# gitlab-amzn2-internet_ntp
resource "aws_security_group_rule" "gitlab-amzn2_egress_internet_ntp" {
  description       = "Allow UDP/123 to Internet (NTP)"
  type              = "egress"
  from_port         = 123
  to_port           = 123
  protocol          = "udp"
  security_group_id = module.gitlab-amzn2.gitlab_sg_id

  cidr_blocks = [
    "0.0.0.0/0",
  ]
}
